--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0037.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0037.html
@@ -31,8 +31,7 @@
       <span class="ocr_line" title="bbox 101 243 1915 296">
         <span id="w_3" class="ocr_word" title="bbox 101 272 190 293">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">votav</ins>
-            <del title="nlp 0.90">votav</del>
+            <ins title="nlp 2.00">νοιαν</ins>
           </span>
         </span>
         <span id="w_4" class="ocr_word" title="bbox 209 257 292 291">
@@ -115,14 +114,19 @@
         </span>
         <span id="w_20" class="ocr_word" title="bbox 1779 256 1817 276" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">|| 31 τὸ αὐτὸ</ins>
+            <ins title="nlp 2.00">τὸ αὐτὸ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 103 301 1917 361">
-        <span id="w_21" class="ocr_word" title="bbox 103 318 207 361" lang="grc">
+        <span id="w_21_0" class="ocr_word" title="bbox 103 318 207 361">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὀνόμ. </ins>
+            <ins class="alt" title="nlp 2.00">(ὀνόμ.</ins>
+          </span>
+        </span>
+        <span id="w_21_1" class="ocr_word" title="bbox 103 318 207 361">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_22" class="ocr_word" title="bbox 227 317 306 356">
@@ -223,11 +227,6 @@
         <span id="w_40" class="ocr_word" title="bbox 1767 314 1824 334" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸν</ins>
-          </span>
-        </span>
-        <span id="w_41" class="ocr_word" title="bbox 1843 304 1917 346" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
       </span>
@@ -348,8 +347,7 @@
         </span>
         <span id="w_63" class="ocr_word" title="bbox 219 431 234 477">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_64" class="ocr_word" title="bbox 262 432 282 465">
@@ -480,8 +478,7 @@
         </span>
         <span id="w_87" class="ocr_word" title="bbox 408 488 424 534">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">li</ins>
-            <del title="nlp 0.90">li</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 454 489 470 522" lang="grc">
@@ -524,8 +521,7 @@
         </span>
         <span id="w_95" class="ocr_word" title="bbox 1012 481 1026 527">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ji</ins>
-            <del title="nlp 0.90">Ji</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 1057 494 1153 518" lang="grc">
@@ -681,8 +677,7 @@
         </span>
         <span id="w_123" class="ocr_word" title="bbox 153 608 168 654">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_124" class="ocr_word" title="bbox 198 608 240 641">
@@ -1323,8 +1318,7 @@
         </span>
         <span id="w_242" class="ocr_word" title="bbox 1470 908 1485 933">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">j</ins>
-            <del title="nlp 0.90">j</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_243" class="ocr_word" title="bbox 1506 887 1548 920">
@@ -1479,9 +1473,14 @@
             <ins class="alt" title="nlp 1.00">15</ins>
           </span>
         </span>
-        <span id="w_270" class="ocr_word" title="bbox 174 1076 233 1109" lang="grc">
+        <span id="w_270_0" class="ocr_word" title="bbox 174 1076 233 1109">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἰσιRS</ins>
+            <ins class="alt" title="nlp 2.00">εἰσι</ins>
+          </span>
+        </span>
+        <span id="w_270_1" class="ocr_word" title="bbox 174 1076 233 1109">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">RS</ins>
           </span>
         </span>
         <span id="w_271" class="ocr_word" title="bbox 334 1074 349 1119">
@@ -1805,8 +1804,7 @@
       <span class="ocr_line" title="bbox 220 1236 1927 1303">
         <span id="w_329" class="ocr_word" title="bbox 220 1252 443 1292">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Brandish</ins>
-            <del title="nlp 0.90">Brandish</del>
+            <ins title="nlp 2.00">Brandisii</ins>
           </span>
         </span>
         <span id="w_330" class="ocr_word" title="bbox 465 1249 773 1303">
@@ -1981,8 +1979,7 @@
         </span>
         <span id="w_358" class="ocr_word" title="bbox 1822 1378 1925 1414">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">uota</ins>
-            <del title="nlp 0.90">uota</del>
+            <ins title="nlp 2.00">nota</ins>
           </span>
         </span>
       </span>
@@ -2000,8 +1997,7 @@
         </span>
         <span id="w_361" class="ocr_word" title="bbox 258 1458 301 1498">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iu</ins>
-            <del title="nlp 0.90">iu</del>
+            <ins title="nlp 2.00">in</ins>
           </span>
         </span>
         <span id="w_362" class="ocr_word" title="bbox 334 1469 519 1498">
