--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0192.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0192.html
@@ -1833,8 +1833,7 @@
       <span class="ocr_line" title="bbox 379 2285 2129 2341">
         <span id="w_354" class="ocr_word" title="bbox 517 2288 522 2340">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
+            <ins title="nlp 2.00">|</ins>
           </span>
         </span>
         <span id="w_355" class="ocr_word" title="bbox 551 2288 627 2327" lang="grc">
@@ -2650,9 +2649,14 @@
             <del title="nlp 0.90">an</del>
           </span>
         </span>
-        <span id="w_506" class="ocr_word" title="bbox 1084 3053 1200 3094" lang="grc">
+        <span id="w_506_0" class="ocr_word" title="bbox 1084 3053 1200 3094">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὥστε&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;ὥστε&gt;</ins>
+          </span>
+        </span>
+        <span id="w_506_1" class="ocr_word" title="bbox 1084 3053 1200 3094">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_507" class="ocr_word" title="bbox 1233 3053 1333 3098" lang="grc">
@@ -2689,11 +2693,6 @@
         <span id="w_513" class="ocr_word" title="bbox 2039 3052 2082 3085">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">22</ins>
-          </span>
-        </span>
-        <span id="w_514" class="ocr_word" title="bbox 2109 3065 2143 3085">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δὲ</ins>
           </span>
         </span>
       </span>
