--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0193.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0193.html
@@ -1411,7 +1411,7 @@
         </span>
         <span id="w_272" class="ocr_word" title="bbox 1109 2031 1183 2087">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;δὲ&amp;#x003E;</ins>
+            <ins title="nlp 2.00">#x003E;</ins>
           </span>
         </span>
         <span id="w_273" class="ocr_word" title="bbox 1201 2047 1360 2087" lang="grc">
@@ -1965,9 +1965,14 @@
             <ins title="nlp 2.00">λέγει,</ins>
           </span>
         </span>
-        <span id="w_380" class="ocr_word" title="bbox 279 2714 346 2770">
+        <span id="w_380_0" class="ocr_word" title="bbox 279 2714 346 2770">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;εἰ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;εἰ&gt;</ins>
+          </span>
+        </span>
+        <span id="w_380_1" class="ocr_word" title="bbox 279 2714 346 2770">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_381" class="ocr_word" title="bbox 379 2732 421 2756" lang="grc">
@@ -2018,11 +2023,6 @@
         <span id="w_390" class="ocr_word" title="bbox 1588 2723 1717 2777" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τρίτῳ,</ins>
-          </span>
-        </span>
-        <span id="w_391" class="ocr_word" title="bbox 1751 2739 1807 2763" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅτι</ins>
           </span>
         </span>
       </span>
