--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0041.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0041.html
@@ -153,7 +153,7 @@
         </span>
         <span id="w_25" class="ocr_word" title="bbox 388 1315 553 1371" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀγαθὸν</ins>
+            <ins title="nlp 2.00">(ἀγαθὸν</ins>
           </span>
         </span>
         <span id="w_26" class="ocr_word" title="bbox 590 1332 661 1370" lang="grc">
@@ -1293,8 +1293,7 @@
       <span class="ocr_line" title="bbox 139 2747 1952 2798">
         <span id="w_247" class="ocr_word" title="bbox 139 2760 195 2780">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TOO</ins>
-            <del title="nlp 0.90">TOO</del>
+            <ins title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
         <span id="w_248" class="ocr_word" title="bbox 232 2747 356 2793" lang="grc">
@@ -1638,14 +1637,7 @@
         </span>
         <span id="w_311" class="ocr_word" title="bbox 1031 2995 1200 3027">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">superscr.</ins>
-            <del title="nlp 0.90">superscr.</del>
-          </span>
-        </span>
-        <span id="w_312" class="ocr_word" title="bbox 1229 2988 1288 3019">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">C-:</ins>
-            <del title="nlp 0.90">C-:</del>
+            <ins title="nlp 2.00">superscr. C2:</ins>
           </span>
         </span>
         <span id="w_313" class="ocr_word" title="bbox 1325 2996 1390 3018">
@@ -1742,7 +1734,7 @@
         </span>
         <span id="w_330" class="ocr_word" title="bbox 1540 3043 1612 3088" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(θερ</ins>
+            <ins title="nlp 2.00">θερ</ins>
           </span>
         </span>
         <span id="w_331" class="ocr_word" title="bbox 1639 3043 1722 3086">
