--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0265.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0265.html
@@ -444,16 +444,11 @@
         </span>
         <span id="w_83" class="ocr_word" title="bbox 1749 587 1821 612" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοι-</ins>
+            <ins title="nlp 2.00">τοιαύτη</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 146 630 1003 685">
-        <span id="w_84" class="ocr_word" title="bbox 146 642 241 680" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αύτη</ins>
-          </span>
-        </span>
         <span id="w_85" class="ocr_word" title="bbox 274 642 431 682" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">χρῆσις·</ins>
@@ -640,9 +635,14 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_121" class="ocr_word" title="bbox 1026 856 1065 880">
+        <span id="w_121_0" class="ocr_word" title="bbox 1026 856 1065 880">
           <span class="alternatives">
-            <ins title="nlp 2.00">α&amp;#x772;ι&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">α&amp;#x772;ι&amp;#x772;</ins>
+          </span>
+        </span>
+        <span id="w_121_1" class="ocr_word" title="bbox 1026 856 1065 880">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_122" class="ocr_word" title="bbox 1095 841 1306 896" lang="grc">
@@ -665,11 +665,6 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_126" class="ocr_word" title="bbox 1757 846 1819 886" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπὶ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 145 903 1818 969">
         <span id="w_127" class="ocr_word" title="bbox 145 919 252 957" lang="grc">
@@ -682,9 +677,14 @@
             <ins class="alt" title="nlp 1.00">εἴρηται.</ins>
           </span>
         </span>
-        <span id="w_129" class="ocr_word" title="bbox 536 904 881 959" lang="grc">
+        <span id="w_129_0" class="ocr_word" title="bbox 536 904 881 959">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὰχατονομάμτως δὲ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἀκατονομάστως</ins>
+          </span>
+        </span>
+        <span id="w_129_1" class="ocr_word" title="bbox 536 904 881 959">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">δὲ&amp;#x003Ε;</ins>
           </span>
         </span>
         <span id="w_131" class="ocr_word" title="bbox 1039 909 1081 949" lang="grc">
@@ -878,19 +878,19 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_168" class="ocr_word" title="bbox 1587 1120 1676 1176">
+        <span id="w_168_0" class="ocr_word" title="bbox 1587 1120 1676 1176">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὡς&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὡς&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_168_1" class="ocr_word" title="bbox 1587 1120 1676 1176">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_169" class="ocr_word" title="bbox 1698 1123 1774 1162" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
-          </span>
-        </span>
-        <span id="w_170" class="ocr_word" title="bbox 1797 1128 1883 1163">
-          <span class="alternatives">
-            <ins title="nlp 2.00">275v</ins>
           </span>
         </span>
       </span>
@@ -1009,7 +1009,7 @@
       <span class="ocr_line" title="bbox 146 1515 1819 1581">
         <span id="w_192" class="ocr_word" title="bbox 146 1515 312 1569" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἴρηται</ins>
+            <ins title="nlp 2.00">(εἴρηται</ins>
           </span>
         </span>
         <span id="w_193" class="ocr_word" title="bbox 343 1532 414 1570" lang="grc">
@@ -1052,14 +1052,14 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_201" class="ocr_word" title="bbox 1474 1523 1576 1579">
+        <span id="w_201_0" class="ocr_word" title="bbox 1474 1523 1576 1579">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τῆς&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τῆς&amp;#x003Ε;</ins>
           </span>
         </span>
-        <span id="w_202" class="ocr_word" title="bbox 1603 1526 1819 1581" lang="grc">
+        <span id="w_201_1" class="ocr_word" title="bbox 1474 1523 1576 1579">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παθητικῆς</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1630,7 +1630,7 @@
         </span>
         <span id="w_311" class="ocr_word" title="bbox 855 2337 1016 2392" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φθάνει</ins>
+            <ins title="nlp 2.00">(φθάωει</ins>
           </span>
         </span>
         <span id="w_312" class="ocr_word" title="bbox 1046 2339 1118 2393" lang="grc">
@@ -1992,15 +1992,14 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_380" class="ocr_word" title="bbox 1688 2780 1735 2820" lang="grc">
+        <span id="w_380_0" class="ocr_word" title="bbox 1688 2780 1735 2820">
           <span class="alternatives">
-            <ins title="nlp 2.00">α&amp;#x003C;ι&amp;#x003E;]</ins>
+            <ins class="alt" title="nlp 2.00">α&amp;#x772;ι&amp;#x772;]</ins>
           </span>
         </span>
-        <span id="w_381" class="ocr_word" title="bbox 1762 2783 1898 2822">
+        <span id="w_380_1" class="ocr_word" title="bbox 1688 2780 1735 2820">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">spectat</ins>
-            <del title="nlp 0.90">spectat</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2281,8 +2280,7 @@
       <span class="ocr_line" title="bbox 87 3061 1852 3114">
         <span id="w_434" class="ocr_word" title="bbox 87 3061 241 3107">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">OiaXoyiu]</ins>
-            <del title="nlp 0.90">OiaXoyiu</del>
+            <ins title="nlp 2.00">διαλόγῳ]</ins>
           </span>
         </span>
         <span id="w_435" class="ocr_word" title="bbox 268 3065 408 3099">
