--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0194.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0194.html
@@ -995,7 +995,7 @@
         </span>
         <span id="w_191" class="ocr_word" title="bbox 661 1255 772 1310" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὃπερ</ins>
+            <ins title="nlp 2.00">ὃπερ</ins>
           </span>
         </span>
         <span id="w_192" class="ocr_word" title="bbox 806 1271 848 1295" lang="grc">
@@ -1005,7 +1005,7 @@
         </span>
         <span id="w_193" class="ocr_word" title="bbox 883 1254 1044 1309" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἓτερον&amp;#x003E;,</ins>
+            <ins title="nlp 2.00">#x003E;,</ins>
           </span>
         </span>
         <span id="w_194" class="ocr_word" title="bbox 1083 1253 1184 1294" lang="grc">
