--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0266.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0266.html
@@ -126,7 +126,7 @@
       <span class="ocr_line" title="bbox 433 279 2114 335">
         <span id="w_21" class="ocr_word" title="bbox 433 279 690 333">
           <span class="alternatives">
-            <ins title="nlp 2.00">έτερωνύμος&amp;#x003E;</ins>
+            <ins title="nlp 2.00">#x003E;</ins>
           </span>
         </span>
         <span id="w_22" class="ocr_word" title="bbox 721 295 788 320" lang="grc">
@@ -613,9 +613,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 431 1005 2111 1063">
-        <span id="w_116" class="ocr_word" title="bbox 431 1005 537 1062">
+        <span id="w_116_0" class="ocr_word" title="bbox 431 1005 537 1062">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;γὰρ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;γὰρ&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_116_1" class="ocr_word" title="bbox 431 1005 537 1062">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_117" class="ocr_word" title="bbox 560 1023 612 1051" lang="grc">
@@ -676,11 +681,6 @@
         <span id="w_128" class="ocr_word" title="bbox 1949 1023 2017 1059" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μὲν</ins>
-          </span>
-        </span>
-        <span id="w_129" class="ocr_word" title="bbox 2039 1023 2111 1062" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
       </span>
@@ -789,7 +789,7 @@
         </span>
         <span id="w_150" class="ocr_word" title="bbox 1815 1147 1874 1197" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins title="nlp 2.00">(τὸ</ins>
           </span>
         </span>
         <span id="w_151" class="ocr_word" title="bbox 1905 1161 1977 1199" lang="grc">
@@ -1912,7 +1912,7 @@
         </span>
         <span id="w_364" class="ocr_word" title="bbox 1541 2461 1653 2514" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ποιὰ</ins>
+            <ins title="nlp 2.00">ποιὰ</ins>
           </span>
         </span>
         <span id="w_365" class="ocr_word" title="bbox 1688 2477 1759 2516" lang="grc">
