--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0133.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0133.html
@@ -440,7 +440,7 @@
         </span>
         <span id="w_82" class="ocr_word" title="bbox 1179 632 1431 671" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">| εγνωσμένων</ins>
+            <ins title="nlp 2.00">εγνωσμένων</ins>
           </span>
         </span>
         <span id="w_83" class="ocr_word" title="bbox 1454 620 1518 659" lang="grc">
@@ -529,9 +529,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 793 947 1109 1004">
-        <span id="w_100" class="ocr_word" title="bbox 793 947 984 1004">
+        <span id="w_100_0" class="ocr_word" title="bbox 793 947 984 1004">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις λε΄&amp;#x003Ε;.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_100_1" class="ocr_word" title="bbox 793 947 984 1004">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">λε'&amp;003E;</ins>
           </span>
         </span>
       </span>
@@ -1855,9 +1860,9 @@
             <ins class="alt" title="nlp 1.00">φιλόσοφοί</ins>
           </span>
         </span>
-        <span id="w_357" class="ocr_word" title="bbox 1791 2620 1849 2654">
+        <span id="w_357_0" class="ocr_word" title="bbox 1791 2620 1849 2654">
           <span class="alternatives">
-            <ins title="nlp 2.00">97ν</ins>
+            <ins class="alt" title="nlp 2.00">97v</ins>
           </span>
         </span>
       </span>
@@ -2326,21 +2331,16 @@
             <ins class="alt" title="nlp 1.00">30</ins>
           </span>
         </span>
-        <span id="w_449" class="ocr_word" title="bbox 1775 3172 1863 3194">
-          <span class="alternatives">
-            <ins title="nlp 2.00">εἴπο-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 58 3218 174 3259">
-        <span id="w_450" class="ocr_word" title="bbox 58 3228 112 3259">
+        <span id="w_450_0" class="ocr_word" title="bbox 58 3228 112 3259">
           <span class="alternatives">
-            <ins title="nlp 2.00">μεν</ins>
+            <ins class="alt" title="nlp 2.00">εἴπομεν</ins>
           </span>
         </span>
-        <span id="w_451" class="ocr_word" title="bbox 137 3218 174 3252">
+        <span id="w_450_1" class="ocr_word" title="bbox 58 3228 112 3259">
           <span class="alternatives">
-            <ins title="nlp 2.00">C1</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
