--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0267.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0267.html
@@ -1706,7 +1706,7 @@
         </span>
         <span id="w_327" class="ocr_word" title="bbox 421 2082 603 2135" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μέλανες</ins>
+            <ins title="nlp 2.00">(μέλανες</ins>
           </span>
         </span>
         <span id="w_328" class="ocr_word" title="bbox 633 2099 704 2136" lang="grc">
