--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0042.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0042.html
@@ -77,7 +77,7 @@
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1128 215 1134 228" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">"τοιοῦτον</ins>
+            <ins title="nlp 2.00">τοιοῦτον</ins>
           </span>
         </span>
         <span id="w_13" class="ocr_word" title="bbox 1349 216 1495 267" lang="grc">
@@ -137,9 +137,14 @@
             <ins class="alt" title="nlp 1.00">ἐκ</ins>
           </span>
         </span>
-        <span id="w_24" class="ocr_word" title="bbox 1058 284 1175 325">
+        <span id="w_24_0" class="ocr_word" title="bbox 1058 284 1175 325">
           <span class="alternatives">
-            <ins title="nlp 2.00">.’</ins>
+            <ins class="alt" title="nlp 2.00">θεοῦ.᾿</ins>
+          </span>
+        </span>
+        <span id="w_24_1" class="ocr_word" title="bbox 1058 284 1175 325">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 1241 283 1325 324" lang="grc">
@@ -165,11 +170,6 @@
         <span id="w_29" class="ocr_word" title="bbox 1776 297 1845 335" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
-          </span>
-        </span>
-        <span id="w_30" class="ocr_word" title="bbox 1867 284 2095 336" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φιλοσοφίας</ins>
           </span>
         </span>
       </span>
@@ -1002,16 +1002,11 @@
         </span>
         <span id="w_194" class="ocr_word" title="bbox 1992 1253 2094 1307" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀγρι-</ins>
+            <ins title="nlp 2.00">ἀγριαίνει</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 416 1322 2096 1380">
-        <span id="w_195" class="ocr_word" title="bbox 416 1342 508 1367" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αίνει</ins>
-          </span>
-        </span>
         <span id="w_196" class="ocr_word" title="bbox 541 1342 634 1380" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
@@ -1059,16 +1054,11 @@
         </span>
         <span id="w_205" class="ocr_word" title="bbox 1964 1323 2096 1375" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀναμι-</ins>
+            <ins title="nlp 2.00">ἀναμιμνήσκεται.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 418 1391 2096 1449">
-        <span id="w_206" class="ocr_word" title="bbox 418 1410 638 1449" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μνήσκεται.</ins>
-          </span>
-        </span>
         <span id="w_207" class="ocr_word" title="bbox 687 1409 743 1433" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὅτι</ins>
@@ -1736,7 +1726,7 @@
         </span>
         <span id="w_337" class="ocr_word" title="bbox 1527 2084 1583 2138" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οἱ</ins>
+            <ins title="nlp 2.00">(οἱ</ins>
           </span>
         </span>
         <span id="w_338" class="ocr_word" title="bbox 1615 2084 1684 2138" lang="grc">
@@ -2313,8 +2303,7 @@
         </span>
         <span id="w_445" class="ocr_word" title="bbox 1998 2696 2165 2742">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">FIpoxXo;]</ins>
-            <del title="nlp 0.90">FIpoxXo;]</del>
+            <ins title="nlp 2.00">Πρόκλος]</ins>
           </span>
         </span>
       </span>
@@ -2659,9 +2648,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 350 2988 2070 3034">
-        <span id="w_507" class="ocr_word" title="bbox 491 2990 612 3029" lang="grc">
+        <span id="w_507_0" class="ocr_word" title="bbox 491 2990 612 3029">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;κύων&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">μνησιν</ins>
+          </span>
+        </span>
+        <span id="w_507_1" class="ocr_word" title="bbox 491 2990 612 3029">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;κύων&amp;#x003E;</ins>
           </span>
         </span>
         <span id="w_508" class="ocr_word" title="bbox 755 2990 794 3022">
@@ -2758,7 +2752,7 @@
         </span>
         <span id="w_525" class="ocr_word" title="bbox 1156 3049 1202 3089" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αἰ</ins>
+            <ins title="nlp 2.00">(αι</ins>
           </span>
         </span>
         <span id="w_526" class="ocr_word" title="bbox 1228 3059 1396 3091">
