--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0238.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0238.html
@@ -787,9 +787,9 @@
             <ins class="alt" title="nlp 1.00">77),</ins>
           </span>
         </span>
-        <span id="w_150" class="ocr_word" title="bbox 2064 894 2148 930">
+        <span id="w_150_0" class="ocr_word" title="bbox 2064 894 2148 930">
           <span class="alternatives">
-            <ins title="nlp 2.00">ν</ins>
+            <ins class="alt" title="nlp 2.00">262v</ins>
           </span>
         </span>
       </span>
@@ -1330,12 +1330,12 @@
             <ins class="alt" title="nlp 1.00">ταῦτα·</ins>
           </span>
         </span>
-        <span id="w_255_0" class="ocr_word" title="bbox 958 1514 1037 1566">
+        <span id="w_255_0_0" class="ocr_word" title="bbox 958 1514 1037 1566">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">&amp;#003C;δεῖ</ins>
           </span>
         </span>
-        <span id="w_255_1" class="ocr_word" title="bbox 958 1514 1037 1566">
+        <span id="w_255_0_1" class="ocr_word" title="bbox 958 1514 1037 1566">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1350,12 +1350,12 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_258_0" class="ocr_word" title="bbox 1248 1513 1417 1568">
+        <span id="w_258_0_0" class="ocr_word" title="bbox 1248 1513 1417 1568">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἐναντία&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_258_1" class="ocr_word" title="bbox 1248 1513 1417 1568">
+        <span id="w_258_0_1" class="ocr_word" title="bbox 1248 1513 1417 1568">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1368,16 +1368,6 @@
         <span id="w_260" class="ocr_word" title="bbox 1517 1530 1636 1568" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἄμφω</ins>
-          </span>
-        </span>
-        <span id="w_261" class="ocr_word" title="bbox 1672 1529 1770 1554" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατὰ</ins>
-          </span>
-        </span>
-        <span id="w_262" class="ocr_word" title="bbox 1802 1527 1913 1567" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φύσιν</ins>
           </span>
         </span>
       </span>
@@ -1560,7 +1550,7 @@
         </span>
         <span id="w_298_0" class="ocr_word" title="bbox 932 1791 1039 1847">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">&amp;#x003C;γἂρ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">#x003E;</ins>
           </span>
         </span>
         <span id="w_298_1" class="ocr_word" title="bbox 932 1791 1039 1847">
