--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0239.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0239.html
@@ -836,7 +836,7 @@
         </span>
         <span id="w_159" class="ocr_word" title="bbox 1186 963 1417 1018" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;διάστασιν&amp;#x003Ε;</ins>
+            <ins title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_160" class="ocr_word" title="bbox 1438 968 1641 1004" lang="grc">
