--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0268.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0268.html
@@ -419,9 +419,14 @@
             <ins title="nlp 1.00" class="alt">ἔστιν</ins>
           </span>
         </span>
-        <span title="bbox 1603 622 1679 679" class="ocr_word" id="w_78">
+        <span id="w_78_0" class="ocr_word" title="bbox 1603 622 1679 679">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἕν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἕν&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_78_1" class="ocr_word" title="bbox 1603 622 1679 679">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 1701 623 1790 663" class="ocr_word" id="w_79">
@@ -432,11 +437,6 @@
         <span lang="grc" title="bbox 1830 639 1914 668" class="ocr_word" id="w_80">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">ἑνὸς</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 1946 627 2081 677" class="ocr_word" id="w_81">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">εἰπεῖν,</ins>
           </span>
         </span>
       </span>
@@ -2496,8 +2496,7 @@
         </span>
         <span title="bbox 1186 3022 1352 3056" class="ocr_word" id="w_478">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">llSOaU</ins>
-            <del title="nlp 0.90">llSOaU</del>
+            <ins title="nlp 2.00">1189a14</ins>
           </span>
         </span>
         <span title="bbox 1546 3023 1587 3056" class="ocr_word" id="w_479">
@@ -2600,16 +2599,11 @@
         </span>
         <span lang="grc" title="bbox 2010 3089 2128 3122" class="ocr_word" id="w_497">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">ὢ</ins>
+            <ins title="nlp 2.00">συναμφότερα</ins>
           </span>
         </span>
       </span>
       <span title="bbox 303 3137 2073 3185" class="ocr_line">
-        <span lang="grc" title="bbox 303 3139 428 3185" class="ocr_word" id="w_498">
-          <span class="alternatives">
-            <ins title="nlp 2.00">φότερα</ins>
-          </span>
-        </span>
         <span title="bbox 454 3139 480 3172" class="ocr_word" id="w_499">
           <span class="alternatives">
             <ins title="nlp 0.10" class="alt">P</ins>
@@ -2706,8 +2700,7 @@
         </span>
         <span title="bbox 495 3198 534 3230" class="ocr_word" id="w_516">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">P1</ins>
           </span>
         </span>
         <span title="bbox 679 3197 722 3232" class="ocr_word" id="w_517">
@@ -2722,8 +2715,7 @@
         </span>
         <span title="bbox 831 3208 896 3230" class="ocr_word" id="w_519">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">cm.</ins>
-            <del title="nlp 0.90">cm.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 927 3198 953 3230" class="ocr_word" id="w_520">
