--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0134.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0134.html
@@ -52,7 +52,7 @@
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1609 143 1798 187">
           <span class="alternatives">
-            <ins title="nlp 2.00">13,6—23]</ins>
+            <ins title="nlp 2.00">—23]</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1823 155 1852 178">
@@ -118,9 +118,14 @@
             <ins class="alt" title="nlp 1.00">ἰδίου</ins>
           </span>
         </span>
-        <span id="w_20" class="ocr_word" title="bbox 1663 259 1741 315">
+        <span id="w_20_0" class="ocr_word" title="bbox 1663 259 1741 315">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;δὲ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;δὲ&amp;003E;</ins>
+          </span>
+        </span>
+        <span id="w_20_1" class="ocr_word" title="bbox 1663 259 1741 315">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_21" class="ocr_word" title="bbox 1775 277 1827 314" lang="grc">
@@ -131,11 +136,6 @@
         <span id="w_22" class="ocr_word" title="bbox 1863 277 1971 301" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὄντος</ins>
-          </span>
-        </span>
-        <span id="w_23" class="ocr_word" title="bbox 2002 277 2146 314" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄτομον</ins>
           </span>
         </span>
       </span>
@@ -1405,7 +1405,7 @@
         </span>
         <span id="w_272" class="ocr_word" title="bbox 1964 1642 2027 1696" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins title="nlp 2.00">(τὸ</ins>
           </span>
         </span>
         <span id="w_273" class="ocr_word" title="bbox 2073 1658 2143 1696" lang="grc">
@@ -1750,9 +1750,14 @@
             <ins class="alt" title="nlp 1.00">διάφοροι,</ins>
           </span>
         </span>
-        <span id="w_341" class="ocr_word" title="bbox 1699 2056 1769 2112">
+        <span id="w_341_0" class="ocr_word" title="bbox 1699 2056 1769 2112">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὧν</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;ὦν</ins>
+          </span>
+        </span>
+        <span id="w_341_1" class="ocr_word" title="bbox 1699 2056 1769 2112">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_342" class="ocr_word" title="bbox 1800 2074 1841 2098" lang="grc">
@@ -1765,16 +1770,11 @@
             <ins class="alt" title="nlp 1.00">αἱ</ins>
           </span>
         </span>
-        <span id="w_344" class="ocr_word" title="bbox 1924 2058 2141 2112" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ὑπογραφαὶ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 469 2126 2143 2182">
         <span id="w_345" class="ocr_word" title="bbox 469 2126 674 2182" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">διάφοροι&amp;#x003Ε;,</ins>
+            <ins title="nlp 2.00">Ε;,</ins>
           </span>
         </span>
         <span id="w_346" class="ocr_word" title="bbox 706 2128 769 2167" lang="grc">
@@ -1919,9 +1919,9 @@
             <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_374" class="ocr_word" title="bbox 2138 2195 2200 2229">
+        <span id="w_374_0" class="ocr_word" title="bbox 2138 2195 2200 2229">
           <span class="alternatives">
-            <ins title="nlp 2.00">98ν</ins>
+            <ins class="alt" title="nlp 2.00">98v</ins>
           </span>
         </span>
       </span>
@@ -1968,9 +1968,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1137 2456 1452 2513">
-        <span id="w_383" class="ocr_word" title="bbox 1137 2456 1331 2513" lang="grc">
+        <span id="w_383_0" class="ocr_word" title="bbox 1137 2456 1331 2513">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις λς΄&amp;#x003Ε;.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_383_1" class="ocr_word" title="bbox 1137 2456 1331 2513">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">λς'&amp;003E;.</ins>
           </span>
         </span>
       </span>
