--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0269.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0269.html
@@ -1512,7 +1512,7 @@
         </span>
         <span id="w_298" class="ocr_word" title="bbox 394 2114 681 2168" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(γραμματιχὴν</ins>
+            <ins title="nlp 2.00">γραμματιχὴν</ins>
           </span>
         </span>
         <span id="w_299" class="ocr_word" title="bbox 720 2113 792 2167" lang="grc">
@@ -1559,7 +1559,7 @@
         </span>
         <span id="w_307" class="ocr_word" title="bbox 368 2183 559 2236" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(διάθεσιν</ins>
+            <ins title="nlp 2.00">διάθεσιν</ins>
           </span>
         </span>
         <span id="w_308" class="ocr_word" title="bbox 586 2181 658 2236" lang="grc">
