--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0240.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0240.html
@@ -710,9 +710,9 @@
             <ins class="alt" title="nlp 1.00">ἴσα,</ins>
           </span>
         </span>
-        <span id="w_134" class="ocr_word" title="bbox 2028 869 2114 905">
+        <span id="w_134_0" class="ocr_word" title="bbox 2028 869 2114 905">
           <span class="alternatives">
-            <ins title="nlp 2.00">263ν</ins>
+            <ins class="alt" title="nlp 2.00">263v</ins>
           </span>
         </span>
       </span>
@@ -1084,14 +1084,14 @@
             <ins class="alt" title="nlp 1.00">ἀλλ’</ins>
           </span>
         </span>
-        <span id="w_207" class="ocr_word" title="bbox 1888 1350 1957 1406">
+        <span id="w_207_0" class="ocr_word" title="bbox 1888 1350 1957 1406">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;εἰ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#003C;εἰ&amp;#003E;</ins>
           </span>
         </span>
-        <span id="w_208" class="ocr_word" title="bbox 1993 1351 2057 1390" lang="grc">
+        <span id="w_207_1" class="ocr_word" title="bbox 1888 1350 1957 1406">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπὶ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1994,9 +1994,14 @@
             <ins class="alt" title="nlp 1.00">ζητήσωμεν·</ins>
           </span>
         </span>
-        <span id="w_382" class="ocr_word" title="bbox 664 2741 818 2797" lang="grc">
+        <span id="w_382_0" class="ocr_word" title="bbox 664 2741 818 2797">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἐπειδὴ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἐπεδὴ</ins>
+          </span>
+        </span>
+        <span id="w_382_1" class="ocr_word" title="bbox 664 2741 818 2797">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_383" class="ocr_word" title="bbox 852 2758 920 2782" lang="grc">
@@ -2009,9 +2014,14 @@
             <ins class="alt" title="nlp 1.00">λέγεται,</ins>
           </span>
         </span>
-        <span id="w_385" class="ocr_word" title="bbox 1164 2743 1413 2799" lang="grc">
+        <span id="w_385_0" class="ocr_word" title="bbox 1164 2743 1413 2799">
           <span class="alternatives">
-            <ins title="nlp 2.00">ζητήσωμεν&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">ζητήσωμεν&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_385_1" class="ocr_word" title="bbox 1164 2743 1413 2799">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_386" class="ocr_word" title="bbox 1450 2745 1537 2798" lang="grc">
@@ -2022,16 +2032,6 @@
         <span id="w_387" class="ocr_word" title="bbox 1575 2747 1644 2798" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
-          </span>
-        </span>
-        <span id="w_388" class="ocr_word" title="bbox 1680 2759 1896 2798" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπιγραφῆς</ins>
-          </span>
-        </span>
-        <span id="w_389" class="ocr_word" title="bbox 1932 2748 2059 2785" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτῶν</ins>
           </span>
         </span>
       </span>
