--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0043.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0043.html
@@ -160,16 +160,11 @@
         </span>
         <span id="w_28" class="ocr_word" title="bbox 1711 534 1882 588" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀρχομέ-</ins>
+            <ins title="nlp 2.00">ἀρχομένους</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 209 601 1938 654">
-        <span id="w_29" class="ocr_word" title="bbox 209 615 295 643" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νους</ins>
-          </span>
-        </span>
         <span id="w_30" class="ocr_word" title="bbox 325 616 393 654" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
@@ -755,7 +750,7 @@
         </span>
         <span id="w_144" class="ocr_word" title="bbox 688 1220 907 1274" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀποδεῖξαι</ins>
+            <ins title="nlp 2.00">(ἀποδεῖξαι</ins>
           </span>
         </span>
         <span id="w_145" class="ocr_word" title="bbox 950 1220 1020 1274" lang="grc">
@@ -944,19 +939,19 @@
             <ins class="alt" title="nlp 1.00">τοῦτο</ins>
           </span>
         </span>
-        <span id="w_181" class="ocr_word" title="bbox 1256 1442 1573 1481" lang="grc">
+        <span id="w_181_0" class="ocr_word" title="bbox 1256 1442 1573 1481">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐπιτηὓεύσαντες</ins>
+            <ins class="alt" title="nlp 2.00">ἐπιτηδεύσαντες</ins>
+          </span>
+        </span>
+        <span id="w_181_1" class="ocr_word" title="bbox 1256 1442 1573 1481">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_182" class="ocr_word" title="bbox 1612 1431 1756 1480" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μᾶλλον</ins>
-          </span>
-        </span>
-        <span id="w_183" class="ocr_word" title="bbox 1795 1445 1885 1482" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡμῖν</ins>
           </span>
         </span>
       </span>
@@ -1095,9 +1090,14 @@
             <ins class="alt" title="nlp 1.00">οὕτως·</ins>
           </span>
         </span>
-        <span id="w_211" class="ocr_word" title="bbox 897 1633 960 1674" lang="grc">
+        <span id="w_211_0" class="ocr_word" title="bbox 897 1633 960 1674">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἰ</ins>
+            <ins class="alt" title="nlp 2.00">῾εἰ</ins>
+          </span>
+        </span>
+        <span id="w_211_1" class="ocr_word" title="bbox 897 1633 960 1674">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_212" class="ocr_word" title="bbox 995 1650 1061 1674" lang="grc">
@@ -1118,11 +1118,6 @@
         <span id="w_215" class="ocr_word" title="bbox 1760 1652 1821 1675" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_216" class="ocr_word" title="bbox 1853 1652 1885 1674" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰ</ins>
           </span>
         </span>
       </span>
@@ -1283,12 +1278,7 @@
         </span>
         <span id="w_247" class="ocr_word" title="bbox 1005 1843 1214 1896" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φιλοσοφία</ins>
-          </span>
-        </span>
-        <span id="w_248" class="ocr_word" title="bbox 1227 1858 1236 1866">
-          <span class="alternatives">
-            <ins title="nlp 2.00">·</ins>
+            <ins class="alt" title="nlp 2.00">φιλοσοφία·</ins>
           </span>
         </span>
         <span id="w_249" class="ocr_word" title="bbox 1286 1845 1488 1896" lang="grc">
@@ -1860,7 +1850,7 @@
         </span>
         <span id="w_358" class="ocr_word" title="bbox 333 2714 352 2734" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἁ</ins>
+            <ins title="nlp 2.00">α΄</ins>
           </span>
         </span>
         <span id="w_359" class="ocr_word" title="bbox 390 2702 414 2735">
@@ -1943,8 +1933,7 @@
       <span class="ocr_line" title="bbox 150 2758 1961 2804">
         <span id="w_374" class="ocr_word" title="bbox 230 2771 326 2795">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tn-o;</ins>
-            <del title="nlp 0.90">tn-o;</del>
+            <ins title="nlp 2.00">καὶ ἵππος</ins>
           </span>
         </span>
         <span id="w_375" class="ocr_word" title="bbox 352 2760 422 2801">
@@ -2195,20 +2184,12 @@
       <span class="ocr_line" title="bbox 153 2931 1963 2980">
         <span id="w_419" class="ocr_word" title="bbox 153 2931 184 2963">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iv</ins>
-            <del title="nlp 0.90">iv</del>
-          </span>
-        </span>
-        <span id="w_420" class="ocr_word" title="bbox 202 2945 249 2965">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">-riu</ins>
-            <del title="nlp 0.90">-riu</del>
+            <ins title="nlp 2.00">έν τῷ</ins>
           </span>
         </span>
         <span id="w_421" class="ocr_word" title="bbox 272 2932 406 2980">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ripoxp.]</ins>
-            <del title="nlp 0.90">ripoxp.]</del>
+            <ins title="nlp 2.00">Προτρ.]</ins>
           </span>
         </span>
         <span id="w_422" class="ocr_word" title="bbox 428 2936 626 2969">
@@ -2305,8 +2286,7 @@
       <span class="ocr_line" title="bbox 153 2991 1962 3039">
         <span id="w_438" class="ocr_word" title="bbox 153 2999 391 3039">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’fTjTEov</ins>
-            <del title="nlp 0.90">’fTjTEov</del>
+            <ins title="nlp 2.00">φιλοσοφητέον</ins>
           </span>
         </span>
         <span id="w_439" class="ocr_word" title="bbox 419 2995 545 3037">
@@ -2393,7 +2373,7 @@
       <span class="ocr_line" title="bbox 153 3048 1963 3098">
         <span id="w_454" class="ocr_word" title="bbox 153 3048 406 3096">
           <span class="alternatives">
-            <ins title="nlp 2.00">(φιλοσοφητέον om.)</ins>
+            <ins title="nlp 2.00">φιλοσοφητέον om.)</ins>
           </span>
         </span>
         <span id="w_456" class="ocr_word" title="bbox 545 3053 566 3084">
@@ -2502,14 +2482,12 @@
         </span>
         <span id="w_475" class="ocr_word" title="bbox 1151 3124 1184 3144">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oe</ins>
-            <del title="nlp 0.90">oe</del>
+            <ins title="nlp 2.00">δὲ</ins>
           </span>
         </span>
         <span id="w_476" class="ocr_word" title="bbox 1211 3124 1317 3148">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cttxta?</ins>
-            <del title="nlp 0.90">cttxta?</del>
+            <ins title="nlp 2.00">αἰτίας</ins>
           </span>
         </span>
         <span id="w_477" class="ocr_word" title="bbox 1344 3112 1470 3145">
@@ -2531,15 +2509,14 @@
         </span>
         <span id="w_480" class="ocr_word" title="bbox 1771 3109 1965 3154">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cpiXosryfta;</ins>
-            <del title="nlp 0.90">cpiXosryfta;</del>
+            <ins title="nlp 2.00">φιλοσοφίας</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 153 3165 1870 3214">
         <span id="w_481" class="ocr_word" title="bbox 153 3165 292 3211">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;τέκναι&amp;x003E;?</ins>
+            <ins title="nlp 2.00">x003E;?</ins>
           </span>
         </span>
         <span id="w_483" class="ocr_word" title="bbox 485 3181 541 3201">
@@ -2594,7 +2571,7 @@
         </span>
         <span id="w_492" class="ocr_word" title="bbox 1648 3170 1837 3212">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;εὑρήμασι&amp;x003E;</ins>
+            <ins title="nlp 2.00">x003E;</ins>
           </span>
         </span>
         <span id="w_493" class="ocr_word" title="bbox 1856 3167 1870 3200">
@@ -2637,7 +2614,7 @@
         </span>
         <span id="w_500" class="ocr_word" title="bbox 740 3226 830 3268">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;τὸ&amp;x003E;?</ins>
+            <ins title="nlp 2.00">x003E;?</ins>
           </span>
         </span>
         <span id="w_501" class="ocr_word" title="bbox 980 3228 1076 3270">
@@ -2648,14 +2625,12 @@
         </span>
         <span id="w_502" class="ocr_word" title="bbox 1104 3231 1219 3264">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aizKdK</ins>
-            <del title="nlp 0.90">aizKdK</del>
+            <ins title="nlp 2.00">ἁπλῶς</ins>
           </span>
         </span>
         <span id="w_503" class="ocr_word" title="bbox 1245 3228 1330 3270">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(Xuis</ins>
-            <del title="nlp 0.90">(Xuis</del>
+            <ins title="nlp 2.00">(λῶς</ins>
           </span>
         </span>
         <span id="w_504" class="ocr_word" title="bbox 1358 3229 1394 3261">
