--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0241.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0241.html
@@ -1028,7 +1028,7 @@
       <span class="ocr_line" title="bbox 262 1380 1826 1440">
         <span id="w_196" class="ocr_word" title="bbox 262 1380 374 1435">
           <span class="alternatives">
-            <ins title="nlp 2.00">Tρεῖς</ins>
+            <ins title="nlp 2.00">ρεῖς</ins>
           </span>
         </span>
         <span id="w_197" class="ocr_word" title="bbox 404 1397 526 1422" lang="grc">
