--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0044.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0044.html
@@ -2255,8 +2255,7 @@
       <span class="ocr_line" title="bbox 325 2987 2139 3037">
         <span id="w_433" class="ocr_word" title="bbox 325 2998 390 3022">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cm.</ins>
-            <del title="nlp 0.90">cm.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_434" class="ocr_word" title="bbox 417 2988 443 3021">
@@ -2294,7 +2293,7 @@
         </span>
         <span id="w_440" class="ocr_word" title="bbox 1193 2991 1264 3030" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_441" class="ocr_word" title="bbox 1290 2991 1392 3034" lang="grc">
@@ -2327,8 +2326,7 @@
         </span>
         <span id="w_446" class="ocr_word" title="bbox 1853 2994 1908 3037">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">C-)</ins>
-            <del title="nlp 0.90">C-</del>
+            <ins title="nlp 2.00">C2)</ins>
           </span>
         </span>
         <span id="w_447" class="ocr_word" title="bbox 2056 2995 2096 3028">
@@ -2527,7 +2525,7 @@
         </span>
         <span id="w_482" class="ocr_word" title="bbox 861 3164 933 3206" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῆς</ins>
+            <ins title="nlp 2.00">(τῆς</ins>
           </span>
         </span>
         <span id="w_483" class="ocr_word" title="bbox 958 3164 1017 3206" lang="grc">
