--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0242.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0242.html
@@ -952,9 +952,9 @@
             <ins title="nlp 2.00">ἀπαριθμεῖται</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 2077 1296 2165 1332" class="ocr_word" id="w_182">
+        <span id="w_182_0" class="ocr_word" title="bbox 2077 1296 2165 1332">
           <span class="alternatives">
-            <ins title="nlp 2.00">264ν</ins>
+            <ins class="alt" title="nlp 2.00">264v</ins>
           </span>
         </span>
       </span>
@@ -2012,7 +2012,7 @@
         </span>
         <span lang="grc" title="bbox 1944 2607 2104 2664" class="ocr_word" id="w_390">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἔχουσι</ins>
+            <ins title="nlp 2.00">ἔχουσι</ins>
           </span>
         </span>
       </span>
